# solarma

./: .gitattributes  .gitignore  .llms.txt  .markdownlint.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  INTERNAL_LICENSE.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  codecov.yml  gradle.properties.example  index.html  package-lock.json  pitch_a7x9kf2m.html  rust-toolchain.toml  solarma_pitch.html
.cargo/: config.toml
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: ARCHITECTURE.md  ATTESTATION_SERVER_SPEC.md  CONFIG_REFERENCE.md  DEPENDENCY_POLICY.md  GOOD_FIRST_ISSUES.md  GRANT_APPLICATION.md  INCIDENT_RESPONSE.md  INVARIANTS.md  KEY_MANAGEMENT.md  PITCH_DECK.md  QA_CHECKLIST.md  QA_MATRIX.md  QA_RESULTS_TEMPLATE.md  RELEASE_CHECKLIST.md  REPRODUCIBLE_BUILDS.md  RUNBOOK.md  RUNBOOK_RELEASE.md  SECURITY_CHECKS.md  STATE_MACHINE.md  TECHNICAL_SPEC.md  THREAT_MODEL.md  TOOLCHAIN.md  (+1 more)
programs/solarma_vault/: Anchor.toml  Cargo.toml  README.md  deny.toml  dump_tx.ts  package-lock.json  package.json
programs/solarma_vault/docs/: STATE_MACHINE.md  TESTING_STRATEGY.md  TEST_CASES.md
programs/solarma_vault/src/: constants.rs  error.rs  events.rs  helpers.rs  lib.rs  prop_tests.rs  state.rs  tests.rs
programs/solarma_vault/src/instructions/: ack_awake.rs  ack_awake_attested.rs  claim.rs  create_alarm.rs  emergency_refund.rs  initialize.rs  mod.rs  slash.rs  snooze.rs  sweep_acknowledged.rs
programs/solarma_vault/tests/: solarma_vault.ts
(+165 files in other folders)
