[package]
name = "solarma-vault"
version = "0.1.0"
description = "Solarma commitment vault - deposit, claim, snooze, slash"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "solarma_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
blake3 = "=1.5.5"

[dev-dependencies]

[profile.release]
overflow-checks = true
